refactor: pdf provider migration

--- a/index.html
+++ b/index.html
@@ -1,40 +1,71 @@
-<!DOCTYPE HTML>
-<html lang=cs>
+<!DOCTYPE html>
+<html lang="cs">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="style/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Portfolio</title>
-  <link rel="stylesheet" type="text/css" href="style/style.css" />
-</head>
+  <body>
+    <div id="main">
+      <div id="header">
+        <div id="header_text">
+          <h1><a href="index.html">KISK portfolio</a></h1>
+        </div>
 
-<body>
-  <div id="main">
-    <div id="header">
-  <div id="header_text">
-    <h1><a href="index.html">KISK portfolio</a></h1>
-  </div>
-
-  <div id="menubar">
-        <ul id="menu">
-          <li class="selected"><a href="index.html">O mně</a></li>
-          <li><a href="page2.html">Reflexe semestru</a></li>
-          <li><a href="page3.html">Různé koncepty</a></li>
-        </ul>
+        <div id="menubar">
+          <ul id="menu">
+            <li class="selected"><a href="index.html">O mně</a></li>
+            <li><a href="page2.html">Reflexe semestru</a></li>
+            <li><a href="page3.html">Různé koncepty</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
-    <div id="site">
-      <div id="banner"></div>
-      <div id="content">
-        <h1>O mně</h1>
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vR-kUsq4l3IzXJ2FBcl0kkjYy-qi1AKk03TuQWZO5KXzCx-XnqtD_CIuHbkn88JDFUVmyKabaU1jtgr/pubembed?start=false&loop=false&delayms=60000" width="865" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-      </div>
-      <p></p>
-      <div id="banner2"></div>
-    </div>
-    <footer id=footer>
-  <p>2025 <i>KISK</i></p>
-   </footer>
+      <div id="site">
+        <div id="banner"></div>
+        <div id="content">
+          <h1>O mně</h1>
 
-  </div>
-</body>
+          <div
+            style="
+              position: relative;
+              width: 100%;
+              height: 0;
+              padding-top: 56.25%;
+              padding-bottom: 0;
+              box-shadow: 0 2px 8px 0 rgba(63, 69, 81, 0.16);
+              margin-top: 1.6em;
+              margin-bottom: 0.9em;
+              overflow: hidden;
+              border-radius: 8px;
+              will-change: transform;
+            "
+          >
+            <iframe
+              loading="lazy"
+              style="
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                border: none;
+                padding: 0;
+                margin: 0;
+              "
+              src="https://www.canva.com/design/DAG87Udt558/ST8tOK3O-KlLfztO__DbvQ/view?embed"
+              allowfullscreen="allowfullscreen"
+              allow="fullscreen"
+            >
+            </iframe>
+          </div>
+        </div>
+        <p></p>
+        <div id="banner2"></div>
+      </div>
+      <footer id="footer">
+        <p>2025 <i>KISK</i></p>
+      </footer>
+    </div>
+  </body>
 </html>
